# gamesvault

./: .gitignore  README.md  index.html  migrate.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
api/: db.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  android-permissions.xml  tauri.conf.json
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/src/: main.rs
src/components/: InicioPage.tsx  OtherPages.tsx  PlataformaTab.tsx  WishlistPage.tsx  ui.tsx
src/db/: index.ts
src/hooks/: useJuegos.ts
src/types/: index.ts
